test_files/s_cproc/macro_define/test_002/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_002/i.input:1:9: error: "defined" cannot be used as a macro name
 #define defined
         ^
